# blocky

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
core/: CMakeLists.txt  README.md
core/include/blocky/: wallet.h
core/src/: wallet.c
node/: CMakeLists.txt  README.md
node/src/: main.c
